@@ -41,11 +41,3 @@
 
 ;; save errors to aid debugging
 (require 'sawfish.wm.ext.error-handler)
-
-;; try-require
-;; try to trequire a script, but don't
-;; err if failed
-(define (try-require sym)
-  (condition-case nil
-      (require sym)
-    (error nil)))
