@@ -101,7 +101,7 @@ Shrink-yank functions and @code{send-to-workspace}.
 
 @item Added @code{keymap-trans} window-matcher [Scott Scriven]
 
-@item Added @code{some} @code{program-available} @code{view-clipboard} @code{try-require} functions [Mark Triggs]
+@item Added @code{some} @code{program-available} @code{view-clipboard} functions [Mark Triggs]
 
 @item Added @code{display-message-with-timeout} @code{browser} commands [Christopher Bratusek]
 
