@@ -1,3 +1,7 @@
+2009-10-05  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/defaults.jl
+	* man/news.texi: removed try-require
+
 2009-10-03  Jeremy Hankins <nowan@nowan.org>
 	* lisp/sawfish/cfg/main.jl.in
 	* lisp/sawfish/gtk/widgets/font.jl.in
